# electron-win7

./: README.md  filenames.gni
docs/: breaking-changes.md
docs/tutorial/: notifications.md
patches/chromium/: .patches  chore_allow_chromium_to_handle_synthetic_mouse_events_for_touch.patch  disable-redraw-lock.patch
patches/node/: .patches  fix_crash_caused_by_gethostnamew_on_windows_7.patch
shell/browser/: browser_win.cc
shell/browser/ui/win/: electron_desktop_window_tree_host_win.cc  electron_desktop_window_tree_host_win.h
win7/: electron-28-win7.patch  x32_args.gn  x64_args.gn
